paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4/sample_001/target.rs:30:14
   |
30 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4/sample_001/target.rs:44:13
   |
44 |         let mut p1 = &mut x[..];
   |             ----^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4/sample_001/target.rs:45:13
   |
45 |         let mut q1 = &y[..];
   |             ----^^
   |             |
   |             help: remove this `mut`

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_4/sample_001/target.rs:58:26
   |
44 |         let mut p1 = &mut x[..];
   |                           - mutable borrow occurs here
...
58 |                 if same(&x[8..], &expect, 16) != 1 {
   |                          ^ immutable borrow occurs here
...
68 |         copy_restrict(8, &mut p1[0..], &q1[24..]);
   |                               -- mutable borrow later used here
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error: aborting due to 2 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0502.
For more information about an error, try `rustc --explain E0277`.